# claude-market-agents

./: .gitignore  .pre-commit-config.yaml  2025-12-16-after-market-report.html  2025-12-18-after-market-report.html  2025-12-19-after-market-report.html  2025-12-22-after-market-report.html  2025-12-23-after-market-report.html  2025-12-24-after-market-report.html  2025-12-26-after-market-report.html  2025-12-29-after-market-report.html  2026-01-02-after-market-report.html  2026-01-05-after-market-report.html  2026-01-06-after-market-report.html  2026-01-12-after-market-report.html  2026-01-13-after-market-report.html  2026-01-14-after-market-report.html  2026-01-15-after-market-report.html  2026-01-16-after-market-report.html  2026-01-19-after-market-report.html  2026-01-20-after-market-report.html  2026-01-21-after-market-report.html  2026-01-22-after-market-report.html  2026-01-23-after-market-report.html  2026-01-26-after-market-report.html  2026-01-27-after-market.html  2026-01-28-after-market-report.html  2026-01-29-after-market.html  2026-01-30-after-market.html  2026-02-02-after-market-report.html  2026-02-03-after-market.html  2026-02-04-after-market-report.html  2026-02-05-after-market.html  2026-02-06-after-market-report.html  2026-02-09-after-market.html  2026-02-10-after-market-report.html  2026-02-11-after-market-report.html  2026-02-12-after-market-report.html  2026-02-13-after-market-report.html  2026-02-16-after-market-report.html  2026-02-17-after-market-report.html  (+199 more)
.claude/agents/: after-market-reporter.md  earnings-trade-analyst.md
.claude/commands/: after-market-report.md
.github/: dependabot.yml
.github/workflows/: ci.yml
backtest/: README.md  chart_generator.py  earnings_trade_backtest_result.html  entry_filter.py  html_parser.py  json_parser.py  main.py  metrics_calculator.py  portfolio_simulator.py  price_fetcher.py  report_generator.py  requirements.txt  run_manifest.py  stop_loss_experiment.py  trade_simulator.py  trailing_stop_experiment.py  vix_filter.py  vix_threshold_experiment.py  walk_forward.py  weekly_bars.py
backtest/tests/: fake_price_fetcher.py  generate_golden.py  test_chart_generator.py  test_cli_validation.py  test_entry_filter.py  test_golden.py  test_html_parser.py  test_json_parser.py  test_main.py  test_metrics_calculator.py  test_portfolio_simulator.py  test_price_fetcher.py  test_report_generator.py  test_run_manifest.py  test_smoke.py  test_trade_simulator.py  (+6 more)
docs/: adaptive-theme-basket-discovery-design.md  backtest-system-design.md  earnings-trade-backtest-plan-v3.md  earnings-trade-entry-quality-filter-design.md  live-opg-launchd-design.md  live-paper-trading-design.md  live-trading-prelaunch-checklist.md
launchd/: com.trade-analysis.after-market-report.plist  com.trade-analysis.earnings-trade-report.plist  com.trade-analysis.executor-place.plist  com.trade-analysis.executor-poll-final.plist  com.trade-analysis.executor-poll-retry.plist  com.trade-analysis.executor-poll.plist  com.trade-analysis.signal-generator.plist
live/: alpaca_client.py  config.py  executor.py  signal_generator.py  state_db.py  trailing_stop_checker.py
prompts/: after-market-report.md  earnings-trade.md  market-environment-strategist.md  ticker_analysis.md
reports/: PG_analysis_2025-12-02.html  after_market_report_2025-12-03.html  earnings_trade_X_message_2025-12-04.md  earnings_trade_analysis_2025-12-04.html  x_post_2025-12-02.md  x_post_2025-12-03.md
scripts/: README.md  email_config.py  lib_retry.sh  publish_reports.py  reconcile_positions_from_alpaca.py  run_after_market_report.sh  run_earnings_analysis_reporter.sh  run_earnings_trade_report.sh  run_executor_place.sh  run_executor_poll.sh  run_fmp_stock_analyzer.sh  run_market_environment_strategist.sh  run_publish_reports.sh  run_signal_generator.sh  send_report.py
tests/: test_lib_retry.sh
(+32 files in other folders)
